--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -35,17 +35,26 @@
                   />
                 </div>
                 
-                <div class="mb-6">
-                  <input
-                    type="password"
-                    class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:border-yellow-400 focus:ring-2 focus:ring-yellow-400/50 transition-all"
-                    placeholder="Contraseña"
-                    [(ngModel)]="password"
-                    name="password"
-                    required
-                    [disabled]="isLoading"
-                  />
-                </div>
+                <div class="mb-6 relative">
+  <input
+    [type]="showPassword ? 'text' : 'password'"
+    class="w-full p-3 pr-10 rounded-lg bg-gray-700 text-white border border-gray-600 focus:border-yellow-400 focus:ring-2 focus:ring-yellow-400/50 transition-all"
+    placeholder="Contraseña"
+    [(ngModel)]="password"
+    name="password"
+    required
+    [disabled]="isLoading"
+  />
+  <button
+    type="button"
+    (click)="toggleShowPassword()"
+    class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-yellow-400 cursor-pointer" aria-label="ver contraseña"
+    [disabled]="isLoading"
+  >
+    <i [ngClass]="showPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"></i>
+  </button>
+</div>
+
                 
                 <button 
                   type="submit" 
