Agregar  nuevo logo

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
       <!-- Logo - Arriba en móvil, izquierda en desktop -->
       <div class="w-full md:w-1/2 flex justify-center order-1 md:order-1">
         <img
-        src="assets/splash/logo.jpg"
+        src="assets/splash/A_Fuego_Lento.gif"
         alt="Logo Restaurante"
         class="w-48 h-48 sm:w-56 sm:h-56 md:w-72 md:h-72 lg:w-120 lg:h-80 object-contain mx-auto hover:scale-105 transition-transform duration-300"
       />
