--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -18,7 +18,7 @@
     width: 24px;
     height: 24px;
     border: 3px solid #fff;
-    border-top: 3px solid #000;
+    border-top: 3px solid #000000b4;
     border-radius: 50%;
     animation: spin 1s linear infinite;
   }
