--- a/src/app/auth/splash/splash.component.html
+++ b/src/app/auth/splash/splash.component.html
@@ -1,6 +1,6 @@
 <div class="splash-container">
     <div class="splash-logo">
-      <img src="assets/splash/logo.jpg" alt="Logo" />
+      <img src="assets/splash/A_Fuego_Lento.gif" alt="Logo" />
     </div>
   </div>
   
